<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FC6018"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gexperience.SurveyActivity$PlaceholderFragment" >

    <RelativeLayout
        android:id="@+id/topMain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dip"
            android:text="@string/survey_heading"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/LinearBottom"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_survey_form"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/LinearBottom"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/topMain"
        android:background="#000000"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/sbcr_name"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="text"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/sbcr_occupation"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>

        <Spinner
            android:id="@+id/spnOccupation"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="15dp"
            android:background="#FFFFFF"
            android:drawSelectorOnTop="true"
            android:padding="5dp"
            android:spinnerMode="dropdown"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/sbcr_age"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/edtAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="number"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left" >

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/sbcr_gender"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rdoGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Male"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left" >

            <TextView
                android:id="@+id/tvMobileNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/sbcr_mobile"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/edtMobileNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="number"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left" >

            <TextView
                android:id="@+id/tv3gPack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/buying_3g"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rdo3g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Yes"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left" >

            <TextView
                android:id="@+id/tvPackageType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/sbcr_monthly_internet_usage"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>

        <Spinner
            android:id="@+id/spnPackageTypes"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="15dp"
            android:background="#FFFFFF"
            android:padding="5dp"
            android:spinnerMode="dropdown"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left" >

            <TextView
                android:id="@+id/tvMobileBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/sbcr_mobile_brand"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>

        <Spinner
            android:id="@+id/spnMobileBrad"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="15dp"
            android:background="#FFFFFF"
            android:padding="5dp"
            android:spinnerMode="dropdown"
            android:textSize="30sp" />
        
        
                <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/sbcr_recharge"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/edtRecharge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="text"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/submit"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="#FF5A01"  />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/reset"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="#FF5A01"  />
    </LinearLayout>

</RelativeLayout>